--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,9 @@
 :root {
     --primary: #E50914;
     --secondary: #141414;
+    --light: #fafafa;
+    --grey-300: #AAA;
 }
-
-
 
 * {
     margin:0;
@@ -13,8 +13,31 @@
 
 body {
     background: var(--secondary);
+    font-family: 'Roboto', sans-serif;
 }
 
 header .container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
 
+header .navbar{
+    margin-top: 1rem;
+    margin-right: 5rem;
+}
+
+header .logo {
+    margin-left: 5rem;
+}
+
+header nav a {
+    text-decoration: none;
+    color: var(--grey-300);
+    margin-right: 10px;
+}
+
+header nav a:hover {
+    color: var(--light);
 }
