--- a/style/main.css
+++ b/style/main.css
@@ -1,10 +1,13 @@
+/*Váriáveis*/
 :root {
+    /*Tema de cores*/
     --primary: #E50914;
     --secondary: #141414;
     --light: #fafafa;
     --grey-300: #AAA;
 }
 
+/*Base*/
 * {
     margin:0;
     padding: 0;
@@ -14,6 +17,7 @@
 body {
     background: var(--secondary);
     font-family: 'Roboto', sans-serif;
+    color: var(--light);
 }
 
 header .container {
@@ -23,6 +27,7 @@ header .container {
     justify-content: space-between;
 }
 
+/*Navbar*/
 header .navbar{
     margin-top: 1rem;
     margin-right: 5rem;
@@ -40,4 +45,65 @@ header nav a {
 
 header nav a:hover {
     color: var(--light);
+}
+
+/*Manga principal*/
+.manga-principal {
+    font-size: 1rem;
+    background: linear-gradient(rgba(0, 0, 0,0.90), rgba(0, 0, 0, 0.10)), url('/img/cover-principal.jpg');
+
+    height: 450px;
+    background-size:cover;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+
+}
+
+.manga-principal .titulo {
+    font-size: 3rem;
+    font-weight: 500;
+
+    margin-left: 5rem;
+    margin-bottom: 1rem;
+}
+
+.manga-principal .descricao {
+    font-size: 1rem;
+    font-weight: 300;
+
+    max-width: 80%;
+
+    margin-bottom: 3rem;
+    margin-left: 5rem;
+}
+
+.manga-principal .botoes{
+    margin-left: 5rem;  
+}
+
+.botao {
+    background-color: rgba(0, 0, 0,0.60);
+    color: var(--light);
+    border: none;
+
+    font-size: 1rem;
+
+    padding: 15px;
+    margin-right: 15px;
+
+    cursor:pointer;
+    transition: .5s ease all;
+}
+
+.botao:hover {
+    background-color: var(--light);
+    color: var(--secondary);
+    font-size: 1.05rem;
+}
+
+.botao i {
+    margin-right: 10px;
 }
