--- a/style/main.css
+++ b/style/main.css
@@ -9,7 +9,7 @@
 
 /*Base*/
 * {
-    margin:0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
@@ -20,53 +20,64 @@ body {
     color: var(--light);
 }
 
+header {
+    background-color: #272727;
+    box-shadow: 10px 5px 5px black;
+
+}
+
 header .container {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-bottom: 10px;
+
 }
 
 /*Navbar*/
-header .navbar{
-    margin-top: 1rem;
-    margin-right: 5rem;
-}
-
-header .logo {
-    margin-left: 5rem;
-}
 
 header nav a {
     text-decoration: none;
     color: var(--grey-300);
     margin-right: 10px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: .3s ease all;
+    text-shadow: 0.5em 0.3em 0.5em black
 }
 
 header nav a:hover {
     color: var(--light);
+    font-size: 1.05rem;
 }
 
 /*Manga principal*/
 .manga-principal {
     font-size: 1rem;
-    background: linear-gradient(rgba(0, 0, 0,0.90), rgba(0, 0, 0, 0.10)), url('/img/cover-principal.jpg');
+    background: linear-gradient(rgba(0, 0, 0, 0.90), rgba(0, 0, 0, 0.10)), url('/img/cover-principal.jpg');
 
     height: 450px;
-    background-size:cover;
+    background-size: cover;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
 
+
+}
+
+.manga-principal .container {
+    margin-left: 100px;
+
 }
 
 .manga-principal .titulo {
     font-size: 3rem;
     font-weight: 500;
-
-    margin-left: 5rem;
     margin-bottom: 1rem;
 }
 
@@ -77,15 +88,12 @@ header nav a:hover {
     max-width: 80%;
 
     margin-bottom: 3rem;
-    margin-left: 5rem;
 }
 
-.manga-principal .botoes{
-    margin-left: 5rem;  
-}
+.manga-principal .botoes {}
 
 .botao {
-    background-color: rgba(0, 0, 0,0.60);
+    background-color: rgba(0, 0, 0, 0.60);
     color: var(--light);
     border: none;
 
@@ -94,16 +102,37 @@ header nav a:hover {
     padding: 15px;
     margin-right: 15px;
 
-    cursor:pointer;
+    cursor: pointer;
     transition: .5s ease all;
+    box-shadow: 10px 5px 5px black;
+
 }
 
 .botao:hover {
     background-color: var(--light);
     color: var(--secondary);
     font-size: 1.05rem;
+    box-shadow: 10px 5px 5px rgb(0, 0, 0);
+
 }
 
 .botao i {
     margin-right: 10px;
+}
+
+/*Carrosel*/
+.titulo-carrosel {
+    font-weight: 500;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.box-manga {
+    height: 400px;
+    width: 200px;
+    display: block;
+}
+
+.carrosel-mangas {
+    margin-top: 0.5rem;
 }
