--- a/style/main.css
+++ b/style/main.css
@@ -131,3 +131,21 @@ header nav a:hover {
 .carrosel-mangas {
     margin-top: 0.5rem;
 }
+
+/*Infos*/
+
+.card {
+    display: flex;
+}
+
+.container-info {
+    display: flex;
+    align-items: center;
+    margin-left: 100px;
+}
+
+.card .capa {
+    margin-top: 15px;
+    margin-bottom: 25px;
+    box-shadow: 10px 5px 5px rgb(0, 0, 0);
+}
