--- a/style/main.css
+++ b/style/main.css
@@ -20,12 +20,6 @@ body {
     color: var(--light);
 }
 
-header {
-    background-color: #272727;
-    box-shadow: 10px 5px 5px black;
-
-}
-
 header .container {
     display: flex;
     flex-direction: row;
@@ -46,7 +40,6 @@ header nav a {
     font-size: 1rem;
     cursor: pointer;
     transition: .3s ease all;
-    text-shadow: 0.5em 0.3em 0.5em black
 }
 
 header nav a:hover {
@@ -90,8 +83,6 @@ header nav a:hover {
     margin-bottom: 3rem;
 }
 
-.manga-principal .botoes {}
-
 .botao {
     background-color: rgba(0, 0, 0, 0.60);
     color: var(--light);
@@ -126,6 +117,13 @@ header nav a:hover {
     height: 400px;
     width: 200px;
     display: block;
+    transition: all 0.3s ease-out;
+}
+
+.box-manga:hover {
+    cursor: pointer;
+    filter: brightness(0.50);
+    position: relative;
 }
 
 .carrosel-mangas {
